--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "TS_NODE=true yarn migrate && nodemon ./src/server.ts",
+    "dev": "yarn migrate && TS_NODE=true NODE_ENV=development nodemon ./src/server.ts",
     "migrate": "sequelize db:migrate",
     "build": "rimraf ./build && tsc",
     "start": "yarn build && NODE_ENV=production yarn migrate && node build/server.js"
